start to create a first template
