# src/main/java/com/krazytop/controller/tft/TFTMetadataController.java
@@ -1,7 +1,12 @@
 package com.krazytop.controller.tft;
 
-import com.krazytop.api_gateway.api.generated.TftApi;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.krazytop.api_gateway.api.generated.TeamfightTacticsMetadataApi;
 import com.krazytop.api_gateway.model.generated.RIOTMetadataDTO;
+import com.krazytop.api_gateway.model.generated.TFTPatchDTO;
+import com.krazytop.exception.CustomException;
+import com.krazytop.http_responses.ApiErrorEnum;
+import com.krazytop.nomenclature.tft.TFTPatch;
 import com.krazytop.service.lol.LOLMetadataService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -10,8 +15,10 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Optional;
+
 @RestController
-public class TFTMetadataController implements TftApi {
+public class TFTMetadataController implements TeamfightTacticsMetadataApi {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(TFTMetadataController.class);
 
@@ -25,7 +32,7 @@ public class TFTMetadataController implements TftApi {
     @Override
     public ResponseEntity<RIOTMetadataDTO> getMetadata() {
         LOGGER.info("Retrieving TFT metadata");
-        RIOTMetadataDTO metadata = metadataService.getMetadata();
+        RIOTMetadataDTO metadata = metadataService.getMetadataDTO();
         LOGGER.info("TFT metadata retrieved");
         return new ResponseEntity<>(metadata, HttpStatus.OK);
     }
